OO-4934: compensation for disadvantages in QTI 2.1 tests